--- a/BriteTime/package.json
+++ b/BriteTime/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sora",
+  "name": "britetime",
   "version": "1.0.0",
   "main": "expo-router/entry",
   "scripts": {
@@ -10,25 +10,26 @@
   },
   "dependencies": {
     "@expo-google-fonts/poppins": "^0.2.3",
-    "expo": "^51.0.38",
-    "expo-av": "~13.10.5",
-    "expo-constants": "~15.4.5",
-    "expo-device": "^5.9.3",
-    "expo-document-picker": "~11.10.1",
-    "expo-font": "~11.10.3",
-    "expo-linking": "~6.2.2",
-    "expo-router": "~3.4.8",
-    "expo-status-bar": "~1.11.1",
+    "expo": "^51.0.39",
+    "expo-av": "~14.0.7",
+    "expo-constants": "~16.0.2",
+    "expo-device": "^6.0.2",
+    "expo-document-picker": "~12.0.2",
+    "expo-font": "~12.0.10",
+    "expo-linking": "~6.3.1",
+    "expo-router": "~3.5.24",
+    "expo-status-bar": "~1.12.1",
+    "fresco": "^0.0.0",
     "install": "^0.13.0",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
-    "react-native": "0.73.6",
+    "react-native": "0.74.5",
     "react-native-animatable": "^1.4.0",
     "react-native-appwrite": "^0.2.2",
-    "react-native-gesture-handler": "~2.14.0",
-    "react-native-reanimated": "~3.6.2",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "~3.31.1",
     "react-native-url-polyfill": "^2.0.0"
   },
   "devDependencies": {
